Dialer App finished

--- a/DialerApp/app/build.gradle
+++ b/DialerApp/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "hu.ekekft.dialerapp"
+        applicationId "com.paprikapp.dialapp"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
